# guardian-llm-benchmark

./: README.md  pyproject.toml  requirements.txt
dataset/: data_person_1000_non_pii_100.csv  data_person_1000_target.csv
model-experiment/: execution.py  model_specs.yaml
model-experiment/results/: Qwen_Qwen3Guard-Stream-4B_pii_benchmark_results.csv  pii_benchmark_comparison.csv
prompt/: __init__.py  prompt.py
tests/: test_benchmark_pipeline.py  test_execution_json_handling.py  test_execution_model_config_yaml.py  test_execution_runner_factory.py  test_generate_non_pii_tool.py  test_prompt_json_output.py  test_result_process_with_json.py
utils/: __init__.py  data-preprocess.py  generate_non_pii_with_openai.py  result_compare.py  result_process.py
