[project]
name = "guardian-llm-benchmark"
version = "0.1.0"
description = "Benchmark pipeline for PII guard models across open and proprietary models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "ollama",
  "opencc",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "transformers>=4.56.1,<5.0.0",
  "torch>=2.5.1",
  "accelerate>=1.12.0",
  "numpy>=2.2.6",
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.uv]
package = false
